details page updated

--- a/public/template-tour.html
+++ b/public/template-tour.html
@@ -77,7 +77,7 @@
               <use xlink:href="img/icons.svg#icon-calendar"></use>
             </svg>
             <span class="overview-box__label">Next date</span>
-            <span class="overview-box__text">August 2021</span>
+            <span class="overview-box__text">June 2023</span>
           </div>
           <div class="overview-box__detail">
             <svg class="overview-box__icon">
@@ -307,8 +307,8 @@
       <div class="cta__img cta__img--logo">
         <img src="img/logo-white.png" alt="inviTours logo" class="" />
       </div>
-      <img src="img/tour-5-2.jpg" alt="" class="cta__img cta__img--1" />
-      <img src="img/tour-5-1.jpg" alt="" class="cta__img cta__img--2" />
+      <img src="img/tours/tour-2-2.jpg" alt="" class="cta__img cta__img--1" />
+      <img src="img/tours/tour-2-1.jpg" alt="" class="cta__img cta__img--2" />
 
       <div class="cta__content">
         <h2 class="heading-secondary">What are you waiting for?</h2>
