--- a/public/template-project.html
+++ b/public/template-project.html
@@ -171,7 +171,7 @@
           <h4 class="card__sub-heading">6-day tour</h4>
           <p class="card__text">
             swimming pool, beach, restaurant, bar, garden, children's area... Everything to spend an unforgettable
-            moment
+            moment.
           </p>
           <div class="card__data">
             <svg class="card__icon">
@@ -201,12 +201,12 @@
 
         <div class="card__footer">
           <p>
-            <span class="card__footer-value">$497</span>
+            <span class="card__footer-value">$597</span>
             <span class="card__footer-text">per person</span>
           </p>
           <p class="card__ratings">
-            <span class="card__footer-value">4.9</span>
-            <span class="card__footer-text">rating (7)</span>
+            <span class="card__footer-value">4.5</span>
+            <span class="card__footer-text">rating (18)</span>
           </p>
           <a href="#" class="btn btn--green btn--small">Details</a>
         </div>
@@ -228,7 +228,7 @@
           <h4 class="card__sub-heading">5-day tour</h4>
           <p class="card__text">
             Welcome to Anan's chalet, an enchanting setting superbly ideal for your relaxation, conviviality and leisure
-            outings
+            outings.
           </p>
           <div class="card__data">
             <svg class="card__icon">
